[package]
name = "RustyProxy"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-websockets = { version = "0.11", features = ["client", "server", "ring", "getrandom"] } # Atualizado para 0.11
httparse = "1.8"
http = "1.0"
bytes = "1.0"
futures-util = { version = "0.3", features = ["sink", "io-util"] } # Adicionado explicitamente com features necessárias
